# stracazzo

./: .gitignore  README.md
calcolatrice stasi e pace/: 2_grado.h  SenzaTitolo1.cpp  SenzaTitolo2.cpp  calcolatrice 2 colore.cpp  calcolatrice 2.cpp  (+2 more)
calcolatrice stasi e pace/calcolatrice/calcolatrice/: 2_grado.h  BasicDegree.cpp  BasicDegree.h  CMakeLists.txt  SenzaTitolo1.cpp  SenzaTitolo2.cpp  calcolatrice 2 colore.cpp  calcolatrice 2.cpp  calcolatrice.vcxproj  calcolatrice.vcxproj.filters  definitivo.cpp  gradi.cpp  gradi.h  prova.cpp
calcolatrice stasi e pace/calcolatrice/calcolatrice/Debug/: calcolatrice.exe.recipe  definitivo.obj.enc  vc140.idb  vc142.idb
calcolatrice stasi e pace/calcolatrice/calcolatrice/Debug/calcolatrice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  calcolatrice.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
calcolatrice stasi e pace/calcolatrice/calcolatrice/x64/Debug/: calcolatrice.exe.recipe  definitivo.obj.enc  vc141.idb  vc142.idb
calcolatrice stasi e pace/calcolatrice/calcolatrice/x64/Debug/calcolatrice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  calcolatrice.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
calcolatrice stasi e pace/calcolatrice/calcolatrice/x64/Release/: calcolatrice.exe.recipe
calcolatrice stasi e pace/calcolatrice/calcolatrice/x64/Release/calcolatrice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  calcolatrice.lastbuildstate  calcolatrice.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+7 files in other folders)
